# swagger.json
@@ -635,6 +635,25 @@
           }
         }
       }
+    },
+    "/call/ads": {
+      "get": {
+        "tags": ["Call"],
+        "summary": "Get ads",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/GetAds"
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
@@ -1879,6 +1898,80 @@
             }
           }
         }
+      },
+      "GetAds": {
+        "type": "array",
+        "description": "Ads array",
+        "items": {
+          "type": "object",
+          "description": "Ad",
+          "properties": {
+            "title": {
+              "type": "string",
+              "description": "Ad's title"
+            },
+            "price": {
+              "type": "string",
+              "description": "Ad's price"
+            },
+            "imageUrl": {
+              "type": "string",
+              "description": "Ad's image url"
+            }
+          }
+        },
+        "example": [
+          {
+            "title": "Smart Watch",
+            "price": 799,
+            "imageUrl": "https://storage.googleapis.com/kidslikev2_bucket/watches_PNG9854.png"
+          },
+          {
+            "title": "New T-Shirt",
+            "price": 699,
+            "imageUrl": "https://storage.googleapis.com/kidslikev2_bucket/bdefcbc72735f64db17f3250b1e64245.png"
+          },
+          {
+            "title": "Nikon Camera",
+            "price": 3499,
+            "imageUrl": "https://storage.googleapis.com/kidslikev2_bucket/photo_camera_PNG7834.png"
+          },
+          {
+            "title": "Apple Monitor",
+            "price": 8999,
+            "imageUrl": "https://storage.googleapis.com/kidslikev2_bucket/580b57fbd9996e24bc43bfe2.png"
+          },
+          {
+            "title": "Old School Radio",
+            "price": 975,
+            "imageUrl": "https://storage.googleapis.com/kidslikev2_bucket/58ac44f7f86c9c2eea74c4e6.png"
+          },
+          {
+            "title": "Compact Stereo Speakers",
+            "price": 850,
+            "imageUrl": "https://storage.googleapis.com/kidslikev2_bucket/z120-stereo-speakers.png"
+          },
+          {
+            "title": "Flying Drone 42K black",
+            "price": 4000,
+            "imageUrl": "https://storage.googleapis.com/kidslikev2_bucket/5cb84c5f7ff3656569c8cec5.png"
+          },
+          {
+            "title": "Powerful Black Speakers",
+            "price": 999,
+            "imageUrl": "https://storage.googleapis.com/kidslikev2_bucket/Speaker-PNG-Background-Image.png"
+          },
+          {
+            "title": "Pink Beat Headphones",
+            "price": 599,
+            "imageUrl": "https://storage.googleapis.com/kidslikev2_bucket/580b57fbd9996e24bc43bfba.png"
+          },
+          {
+            "title": "Vintage Microphone and Stand",
+            "price": 2400,
+            "imageUrl": "https://storage.googleapis.com/kidslikev2_bucket/580b57fbd9996e24bc43bfdb.png"
+          }
+        ]
       }
     },
     "securitySchemes": {
